--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="add">Добавить</string>
     <string name="temp">%1$d°</string>
     <string name="today">Сегодня %1$s</string>
+    <string name="message">"Произошла ошибка, повторите попытку"</string>
 </resources>
